--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ jni_fn = "0.1"
 ndk-sys = "0.6"
 
 # wasm target
-js-sys = { version = "0.3.78", default-features = false }
-wasm-bindgen = "=0.2.101"
-wasm-bindgen-futures = "0.4.51"
-web-sys = { version = "0.3.78", default-features = false }
+js-sys = { version = "0.3", default-features = false }
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4"
+web-sys = { version = "0.3", default-features = false }
